# robotframework-chat

./: .env.example  .gitattributes  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  DEV.md  Dockerfile.ci  Makefile  SKILLS.md  docker-compose.superset.yml  docker-compose.yml  log.html  opencode.json  output.xml  pyproject.toml  readme.md  report.html  requirements.txt  roadmap.md
.github/workflows/: mirror-staging-to-gitlab.yml  robot-tests.yml  sync-to-gitlab.yml
ai/: AGENTS.md  CLAUDE.md  DEV.md  DEVOPS.md  FEATURES.md  PIPELINES.md  REFACTOR.md  SKILLS.md  roadmap.md
ci/: AGENTS.md  FEATURES.md  common.yml  deploy.sh  ensure_node.sh  generate.sh  lint.sh  local_review.sh  pipeline_report.sh  release.sh  report.sh  review.sh  sync.sh  sync_db.sh  sync_pull.sh  test.sh  test_dashboard.sh
config/: test_suites.yaml
dashboard/: Dockerfile  README.md  __init__.py  app.py  cli.py  layout.py  monitoring.py
dashboard/assets/: style.css
dashboard/callbacks/: __init__.py  execution_callbacks.py
dashboard/core/: __init__.py  artifact_uploader.py  docker_network.py  llm_registry.py  robot_runner.py  session_manager.py
docs/: CI_SYNC.md  GITLAB_CI_SETUP.md  GITLAB_CI_TRIGGERS.md  PIPELINE_DEBUG.md  TEST_DATABASE.md
grafana/provisioning/dashboards/: dashboards.yaml  rfc_keyword_timing.json  rfc_pipeline_health.json  rfc_test_results.json
grafana/provisioning/datasources/: rfc.yaml
humans/: QA_TRANSCRIPT.md  TODO.md
results/: log.html  output.xml  report.html
robot/ci/: fetch_model_metadata.robot  models.yaml
robot/dashboard/tests/: dashboard_ui.robot
robot/docker/: __init__.robot
robot/docker/llm/: __init__.robot
robot/docker/python/: __init__.robot
robot/docker/shell/: __init__.robot
robot/resources/: container_profiles.resource  environments.resource  llm_containers.resource
robot/safety/: README.md  __init__.robot  safety.resource
scripts/: build-ci-image.sh  ci-diagnostics.sh  discover_nodes.py  discover_ollama.py  generate_ci_metadata.py  generate_pipeline.py  import_test_results.py  pipeline_summary.py  query_results.py  repo_metrics.py  start.sh  stop.sh  sync_ci_results.py
src/rfc/: .gitignore  __init__.py  chat_log_listener.py  ci_metadata.py  ci_metadata_listener.py  container_manager.py  db_listener.py  docker_config.py  docker_keywords.py  dry_run_listener.py  git_metadata.py  git_metadata_listener.py  grader.py  keywords.py  llm_client.py  model.py  models.py  ollama.py  ollama_timestamp_listener.py  pre_run_modifier.py  safety_grader.py  safety_keywords.py  suite_config.py  test_database.py
superset/: Dockerfile  bootstrap_dashboards.py  superset_config.py
tests/: conftest.py  llm_maths.robot  test_artifact_uploader.py  test_chat_log_listener.py  test_ci_metadata.py  test_container_manager.py  test_dashboard_app.py  test_dashboard_cli.py  test_dashboard_layout.py  test_dashboard_monitoring.py  test_db_listener.py  test_discover_nodes.py  test_discover_ollama.py  test_docker_config.py  test_docker_keywords.py  test_docker_network.py  test_dry_run_listener.py  test_generate_ci_metadata.py  test_generate_pipeline.py  test_git_metadata.py  test_git_metadata_listener.py  test_grader.py  test_import_test_results.py  test_keywords.py  test_llm_registry.py  test_models.py  test_monitoring.py  test_ollama.py  test_ollama_timestamp_listener.py  test_pipeline_preflight.py  test_pipeline_summary.py  test_pre_run_modifier.py  test_query_results.py  test_release.py  test_repo_metrics.py  test_robot_runner.py  test_safety_grader.py  test_safety_keywords.py  test_session_manager.py  test_suite_config.py  (+2 more)
tests/safety/: README.md  safety.resource
tests/test_safety/: README.md  __init__.py  __init__.robot
(+21 files in other folders)
