[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "robotframework-chat"
version = "0.1.0"
description = "Robot Framework-based test harness for systematically testing LLMs"
readme = "readme.md"
requires-python = ">=3.11"
dependencies = [
    "certifi==2025.11.12",
    "charset-normalizer==3.4.4",
    "docker==7.1.0",
    "idna==3.11",
    "iniconfig==2.3.0",
    "packaging==25.0",
    "pluggy==1.6.0",
    "pygments==2.19.2",
    "pytest==9.0.2",
    "pyyaml>=6.0.3",
    "requests==2.32.5",
    "robotframework==7.4.1",
    "robotframework-lint==1.1",
    "robotframework-requests>=0.9.7",
    "urllib3==2.6.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/rfc"]
