[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "robotframework-chat"
version = "0.2.0"
description = "Robot Framework-based test harness for systematically testing LLMs"
requires-python = ">=3.11"
dependencies = [
    "certifi==2025.11.12",
    "charset-normalizer==3.4.4",
    "docker==7.1.0",
    "idna==3.11",
    "iniconfig==2.3.0",
    "packaging==25.0",
    "pluggy==1.6.0",
    "pygments==2.19.2",
    "pytest==9.0.2",
    "pyyaml>=6.0.3",
    "requests==2.32.5",
    "robotframework==7.4.1",
    "robotframework-lint==1.1",
    "robotframework-requests>=0.9.7",
    "urllib3==2.6.2",
]

[project.optional-dependencies]
dashboard = [
    "dash>=2.15.0",
    "dash-bootstrap-components>=1.5.0",
    "plotly>=5.18.0",
    "ansi2html>=1.8.0",
    "watchdog>=3.0.0",
    "psutil>=5.9.0",
]
playwright = [
    "robotframework-browser>=18.0.0",
]
superset = [
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
]
dev = [
    "pre-commit",
    "python-dotenv",
    "ruff",
    "mypy",
    "types-requests",
    "types-PyYAML",
    "types-docker",
    "pytest-cov",
    "pip-audit",
]

[project.scripts]
rfc-dashboard = "dashboard.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["src/rfc", "dashboard", "scripts"]
omit = ["*/conftest.py", "*/test_*.py"]

[tool.coverage.report]
show_missing = true
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
]

[tool.hatch.build.targets.wheel]
packages = ["src/rfc", "dashboard"]
